prometheus-15.9.0/templates/alertmanager/vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"networking.istio.io/v1alpha3","kind":"VirtualService","metadata":{"annotations":{},"name":"prometheus-alertmanager","namespace":"default"},"spec":{"gateways":["httpbin-gateway"],"hosts":["alertmanager.com"],"http":[{"match":[{"uri":{"prefix":"/"}}],"route":[{"destination":{"host":"prometheus-alertmanager","port":{"number":80}}}]}]}}
  generation: 1
  name: prometheus-alertmanager
  namespace: default
spec:
  gateways:
    - httpbin-gateway
  hosts:
    - alertmanager.com
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus-alertmanager
            port:
              number: 80
